plugins {
    id 'java'
}

group 'com.test'
version '1.0-SNAPSHOT'

sourceCompatibility = 11

repositories {
    maven {
        url 'https://maven.aliyun.com/nexus/content/groups/public/'
    }
}

dependencies {
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
    testImplementation group: 'org.objenesis', name: 'objenesis', version: '3.1'

    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.8.0'
    implementation group: 'com.101tec', name: 'zkclient', version: '0.11'
    implementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.3'
    implementation group: 'org.apache.commons', name: 'commons-pool2', version: '2.7.0'
    implementation group: 'cglib', name: 'cglib', version: '3.3.0'
    implementation group: 'org.javassist', name: 'javassist', version: '3.26.0-GA'

    // Java Object Layout，可以打印类的布局
    implementation group: 'org.openjdk.jol', name: 'jol-core', version: '0.10'
    implementation group: 'com.google.guava', name: 'guava', version: '29.0-jre'
}

jar {
    manifest {
        attributes 'Manifest-Version': 1.0, 'Premain-Class': 'com.test.bytebuddy.agent.time.TimerAgent'
    }
}
